- Fixed multiple bugs concerned with SimpleStringMessage and having a dedicated variant for each side